# GearedUR10

./: ErrorPlot.txt  GearedUR10Objective.m  README.md  elbow_joint_statePID.txt  gearbox.world  gearedur10.sdf  l_finger_actuator_statePID.txt  model.sdf  model1.sdf  objgearedur10.sdf  octave-workspace  r_finger_actuator_statePID.txt  resting-controller-PID.cpp  resting-controller.cpp  shoulder_lift_joint_statePID.txt  shoulder_pan_joint_statePID.txt  sinusoidal-controller.cpp  ur10-geared.xml  wrist_1_joint_statePID.txt  wrist_2_joint_statePID.txt  wrist_3_joint_statePID.txt
IKJointInfo/: elbow_joint_desired005.txt  elbow_joint_desired01.txt  elbow_joint_desired05.txt  elbow_joint_state005.txt  elbow_joint_state01.txt  elbow_joint_state05.txt  fixed_hand_to_wrist_desired.txt  fixed_hand_to_wrist_desired01.txt  fixed_hand_to_wrist_state.txt  fixed_hand_to_wrist_state005.txt  fixed_hand_to_wrist_state01.txt  fixed_hand_to_wrist_state05.txt  l_finger_actuator_state005.txt  l_finger_actuator_state01.txt  l_finger_actuator_state05.txt  r_finger_actuator_desired005.txt  r_finger_actuator_state005.txt  r_finger_actuator_state01.txt  r_finger_actuator_state05.txt  shoulder_lift_joint_desired005.txt  shoulder_lift_joint_desired01.txt  shoulder_lift_joint_desired05.txt  shoulder_lift_joint_state005.txt  shoulder_lift_joint_state01.txt  shoulder_lift_joint_state05.txt  shoulder_pan_joint_desired005.txt  shoulder_pan_joint_desired01.txt  shoulder_pan_joint_desired05.txt  shoulder_pan_joint_state005.txt  world_joint_state.txt  (+24 more)
gazebo_plugin_tutorial/: CMakeLists.txt  hello_world.cc
(+294 files in other folders)
